--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "ts-node-dev ./src/index.ts",
     "start": "node ./build/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,8 +24,11 @@
     "@types/bcryptjs": "^2.4.3",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.7",
     "@types/knex": "^0.16.1",
     "@types/uuid": "^9.0.3",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
